Changed a class to avoid overlaping

--- a/app/assets/stylesheets/pages/_games_index.scss
+++ b/app/assets/stylesheets/pages/_games_index.scss
@@ -243,7 +243,7 @@
   margin-bottom: 10px;
 }
 
-.form-control {
+.search-form-index {
   background-color: #313030;
   outline: none;
   border: none;
